<resources>
    <string name="app_name">TODO</string>
    <string name="user_id_hint">User Id</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="calender">Calender</string>
    <string name="todo_app">TODO APP</string>
    <string name="edittext">edit_text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_button">floating_button</string>
    <string name="completed_list">Completed List</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="todo_title">todo title</string>
    <string name="todo_sub_title">todo sub title</string>
    <string name="add">ADD</string>
</resources>