<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityAddTask">

    <include
        android:id="@+id/addTaskToolbar"
        layout="@layout/appbar_layout_other"/>


    <EditText
        android:id="@+id/addTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="task"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/addTaskToolbar"
        style="@style/add_task_text"
        />

    <EditText
        android:id="@+id/addTaskSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="task"
        android:hint="@string/detail"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/addTaskTitle"
        style="@style/add_task_text"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addTaskSubtitle"
        android:text="@string/add"
        android:textSize="16sp"
        android:layout_margin="10dp"
        style="@style/button_style"/>


</androidx.constraintlayout.widget.ConstraintLayout>